wacc/test/golden/syntaxErr.function.badlyPlaced
# program has function before begin

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

int foo() is
  return 42
end

begin
  int x = call foo()
end


(line 11, column 1):
  unexpected "int"
  expected begin
  >
  >int foo() is
   ^^^
  >  return 42